# brandbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: build-release-notes.py  check-version.py
.github/workflows/: ci.yml  release.yml
docs/: google.md  how-it-works.md  microsoft.md
src/brandbox/: __init__.py  __main__.py  cli.py  logos.py  state.py
src/brandbox/providers/: __init__.py  base.py  google.py  microsoft.py
tests/: conftest.py
tests/unit/: test_cli.py  test_cli_image_processing.py  test_logos.py  test_state.py
tests/unit/providers/: test___init__.py  test_base.py  test_google.py  test_microsoft.py
