[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandbox"
version = "0.2.0"
description = "A powerful CLI tool that finds and sets company logos as your contact photos in Microsoft 365, Outlook, and Gmail"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "divisionseven" }]
keywords = [
    "outlook",
    "microsoft365",
    "gmail",
    "inbox",
    "email",
    "logos",
    "contacts",
    "cli",
    "branding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "artty>=0.1.6",
    "cairosvg>=2.7.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "msal>=1.28.0",
    "Pillow>=10.0.0",
    "platformdirs>=4.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "tldextract>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/divisionseven/brandbox"
Repository = "https://github.com/divisionseven/brandbox"
Documentation = "https://github.com/divisionseven/brandbox#readme"
"Bug Tracker" = "https://github.com/divisionseven/brandbox/issues"

[project.scripts]
brandbox = "brandbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brandbox"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require network or external services)",
    "slow: Tests that take longer than normal",
]

[tool.coverage.run]
source = ["brandbox"]
branch = true
omit = ["**/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
